--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Grains.Interfaces\Grains.Interfaces.csproj" />
+    <ProjectReference Include="..\Grains\Grains.csproj" />
   </ItemGroup>
 
 </Project>
